[project]
name = "py-aiovk"
version = "1.0.0.rc1"
authors = [
  { name="ScuroNeko" },
]
description = "Library for operating with VK API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ScuroNeko/py-aiovk"
"Bug Tracker" = "https://github.com/ScuroNeko/py-aiovk/issues"